# spinepose

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
src/spinepose/: __init__.py  _version.py  inference.py  metainfo.py  pose_estimator.py  pose_tracker.py
src/spinepose/tools/: __init__.py  base_solution.py  base_tool.py  smoothing.py  visualization.py
src/spinepose/tools/object_detection/: __init__.py  post_processings.py  yolox.py
src/spinepose/tools/pose_estimation/: __init__.py  pre_processings.py  rtmpose.py
src/spinepose/tools/utils/: file.py  multithreading.py
