[metadata]
name = spinepose
version = attr: spinepose._version.__version__
author = Muhammad Saif Ullah Khan
author_email = saifkhichi96@gmail.com
description = A Python package for 2D human spine keypoint estimation in the wild.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saifkhichi96/spinepose
keywords = pose-estimation, spine, biomechanics, sports
license = CC-BY-NC-4.0
license_files = LICENSE
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Education
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Multimedia :: Graphics
project_urls =
    Bug Tracker = https://github.com/saifkhichi96/spinepose/issues
    Documentation = https://github.com/saifkhichi96/spinepose/tree/main?tab=readme-ov-file

[options]
python_requires = >=3.9
install_requires =
    anytree
    numpy
    OneEuroFilter
    opencv-python
    onnxruntime-gpu
    torch
    tqdm
zip_safe = False

[options.entry_points]
console_scripts =
    spinepose = spinepose.inference:main